Bug #208721.  Can't type Unicode Keysyms when compiled with Gtk2.  Not part of the default build.  Patch from Behnam Esfahbod.  r+sr=blizzard, a=chofmann